kustomize/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: player
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: admin
